--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -9,14 +9,14 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="chat">
+                <span class="bi bi-chat-dots-fill" aria-hidden="true"></span> Cross-Tenant Chat
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="bi bi-chat-dots-fill" aria-hidden="true"></span> Cross-Tenant Chat
+            <NavLink class="nav-link" href="fluent-demo">
+                <span class="bi bi-palette-fill" aria-hidden="true"></span> Fluent UI Demo
             </NavLink>
         </div>
 
@@ -30,18 +30,6 @@
             <a class="nav-link" href="/logout">
                 <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Logout
             </a>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
         </div>
     </nav>
 </div>
