--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,36 +1,116 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">CrossTenantChat</a>
+﻿<!-- Fluent UI Enhanced Navigation Menu -->
+<div class="fluent-nav-header">
+    <div class="fluent-nav-brand">
+        <div class="fluent-nav-logo">
+            <svg width="28" height="28" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                <path d="M8 0C5.829 0 4.067 1.64 4.067 3.667c0 .26.022.516.064.767C1.747 5.078 0 7.06 0 9.444 0 12.206 2.24 14.444 5 14.444h6c2.761 0 5-2.238 5-5s-2.239-5-5-5c-.423 0-.833.053-1.221.152C9.315 2.11 8.707 0 8 0zM5 6.5a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3zm6 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"/>
+            </svg>
+        </div>
+        <h1 class="fluent-nav-title">CrossTenantChat</h1>
     </div>
+    
+    <button class="fluent-nav-toggle" type="button" aria-label="Toggle navigation menu" title="Navigation menu">
+        <span class="fluent-nav-toggle-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </span>
+    </button>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="bi bi-chat-dots-fill" aria-hidden="true"></span> Cross-Tenant Chat
+<nav class="fluent-nav-menu">
+    <div class="fluent-nav-section">
+        <div class="fluent-nav-section-title">Main</div>
+        
+        <div class="fluent-nav-item">
+            <NavLink class="fluent-nav-link" href="" Match="NavLinkMatch.All">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Home</span>
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fluent-demo">
-                <span class="bi bi-palette-fill" aria-hidden="true"></span> Fluent UI Demo
+        <div class="fluent-nav-item">
+            <NavLink class="fluent-nav-link" href="chat">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Cross-Tenant Chat</span>
+                <span class="fluent-nav-badge">New</span>
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="login">
-                <span class="bi bi-box-arrow-in-right" aria-hidden="true"></span> Login
+        <div class="fluent-nav-item">
+            <NavLink class="fluent-nav-link" href="fluent-demo">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0Zm-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                        <path d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Fluent UI Demo</span>
+            </NavLink>
+        </div>
+    </div>
+
+    <div class="fluent-nav-section">
+        <div class="fluent-nav-section-title">Account</div>
+        
+        <div class="fluent-nav-item">
+            <NavLink class="fluent-nav-link" href="login">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
+                        <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Sign In</span>
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <a class="nav-link" href="/logout">
-                <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Logout
+        <div class="fluent-nav-item">
+            <a class="fluent-nav-link" href="/logout">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Sign Out</span>
             </a>
         </div>
-    </nav>
-</div>
+    </div>
+
+    <div class="fluent-nav-section">
+        <div class="fluent-nav-section-title">Examples</div>
+        
+        <div class="fluent-nav-item">
+            <NavLink class="fluent-nav-link" href="counter">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M6.271 5.055a.5.5 0 0 1 .52.49L7 7.5h1.5a.5.5 0 0 1 0 1H7l.231 1.955a.5.5 0 0 1-.99.09L5.854 8.5H4.5a.5.5 0 0 1 0-1h1.854l-.271-2.055a.5.5 0 0 1 .188-.44z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Counter</span>
+            </NavLink>
+        </div>
+
+        <div class="fluent-nav-item">
+            <NavLink class="fluent-nav-link" href="weather">
+                <span class="fluent-nav-icon">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.636 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-1.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"/>
+                    </svg>
+                </span>
+                <span class="fluent-nav-text">Weather</span>
+            </NavLink>
+        </div>
+    </div>
+</nav>
 
